# MiMoMonitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml
scripts/: build.ps1  dev.ps1  env.ps1  setup-rust-d.ps1  tauri-check.ps1  tauri-dev.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
