[package]
name = "app"
version = "1.0.0"
description = "MiMo Monitor desktop app"
authors = ["mixiaosu"]
license = "MIT"
repository = "https://github.com/mixiaosu/MiMoMonitor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["json"] }
